build.gradle: fix tests for java 16 by adding jvm arguments to open for reflection